public class CinematicsSubGameManager : SubGameManager
{
    public override GameState CorrespondingState => GameState.Cinematics;
}
