public class ExplorationSubGameManager : SubGameManager
{
    public override GameState CorrespondingState => GameState.Exploration;
}
