public enum GameState
{
    None,
    Dialogue,
    Petanque,
    Cinematics,
    Exploration,
}
